objects/Q4__Qvidian_User__c.object
<CustomObject>
    <fields>
        <fullName>Q4__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Q4__Groups__c</fullName>
        <label>Groups</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q4__LoginSuccesses__c</fullName>
        <label>Login Successes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q4__ManageCRM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q4__ManageContent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q4__ManageHomePage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage Home Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q4__ManagePlaybooks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage Playbooks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q4__ManageUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_User_ID__c</fullName>
        <externalId>true</externalId>
        <label>[Obsolete] Qvidian User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q4__Qvidian_User_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Qvidian User Identifier</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Q4__UsePlaybooks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Playbooks</label>
        <type>Checkbox</type>
    </fields>
    <label>Qvidian User</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qvidian User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>